<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="#B2C599"
        android:text="@string/prayer_times"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        android:padding="20sp"
        android:textColor="#000000"

        />

    <TextView
        android:id="@+id/text_View1"
        android:layout_width="78dp"
        android:layout_height="28dp"
        android:layout_below="@+id/text_view"
        android:layout_marginStart="18dp"
        android:text="@string/prayer_names"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="110dp"
        android:padding="4sp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="105dp"
        android:layout_height="28dp"
        android:text="@string/prayer_start_time"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_toEndOf="@id/text_View1"
        android:layout_alignBottom="@id/text_View1"
        android:padding="4sp"
        android:layout_marginStart="7dp"

        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="97dp"
        android:layout_height="28dp"
        android:text="@string/prayer_end_time"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_alignBottom="@id/textView2"
        android:layout_toEndOf="@+id/textView2"
        tools:layout_editor_absoluteX="286dp"
        tools:layout_editor_absoluteY="110dp"
        android:padding="4sp"/>


    <TextView
        android:id="@+id/fajr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prayer_fajr"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/text_View1"
        android:gravity="top"
        android:paddingTop="10dp"
        android:paddingStart="4dp"
        android:paddingEnd="0dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_alignBaseline="@+id/fajr_start_time"
        />

    <TextView
        android:id="@+id/fajr_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/start_time"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/fajr_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_alignStart="@id/textView3"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/start_time"

        android:textSize="17sp" />

    <TextView
        android:id="@+id/zuhr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fajr"
        android:layout_alignStart="@id/fajr"
        android:layout_alignBaseline="@+id/zuhr_start_time"
        android:layout_marginStart="0dp"
        android:layout_marginTop="12dp"

        android:gravity="top"

        android:paddingTop="10dp"
        android:paddingEnd="0dp"
        android:text="@string/prayer_Zuhr"


        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/zuhr_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fajr_start_time"
        android:layout_alignStart="@+id/fajr_start_time"
        android:padding="10dp"
        android:text="@string/start_time"
        android:textSize="17sp"

        />

    <TextView
        android:id="@+id/zuhr_end_time"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_below="@id/fajr_end_time"
        android:layout_alignStart="@id/textView3"
        android:padding="10dp"
        android:text="@string/start_time"
        android:textSize="17sp"

        />

    <TextView
        android:id="@+id/asr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zuhr"
        android:layout_alignStart="@id/zuhr"
        android:layout_alignBaseline="@+id/asr_start_time"

        android:layout_marginTop="0dp"
        android:layout_marginBottom="-49dp"
        android:gravity="top"
        android:paddingStart="4dp"
        android:paddingTop="10dp"
        android:paddingEnd="0dp"
        android:text="@string/prayer_Asr"


        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/asr_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/zuhr_start_time"
        android:layout_alignStart="@+id/textView2"
        android:padding="10dp"
        android:text="@string/start_time"
        android:textSize="17sp"

        />

    <TextView
        android:id="@+id/asr_end_time"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_below="@id/zuhr_end_time"
        android:layout_alignStart="@id/textView3"
        android:padding="10dp"
        android:text="@string/start_time"
        android:textSize="17sp"

        />

    <TextView
        android:id="@+id/maghrib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/asr"
        android:layout_alignStart="@id/asr"
        android:layout_alignBaseline="@+id/maghrib_start_time"

        android:layout_marginTop="2dp"

        android:gravity="top"
        android:paddingStart="4dp"
        android:paddingTop="10dp"
        android:paddingEnd="0dp"
        android:text="@string/prayer_Maghrib"


        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/maghrib_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/asr_start_time"
        android:layout_alignStart="@+id/textView2"
        android:padding="10dp"
        android:text="@string/start_time"
        android:textSize="17sp"

        />

    <TextView
        android:id="@+id/maghrib_end_time"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_below="@id/asr_end_time"
        android:layout_alignStart="@id/textView3"
        android:padding="10dp"
        android:text="@string/start_time"
        android:textSize="17sp"

        />


    <TextView
        android:id="@+id/isha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maghrib"
        android:layout_alignStart="@id/maghrib"
        android:layout_alignBaseline="@+id/isha_start_time"

        android:layout_marginTop="2dp"

        android:gravity="top"
        android:paddingStart="4dp"
        android:paddingTop="10dp"
        android:paddingEnd="0dp"
        android:text="@string/prayer_Isha"


        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/isha_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/maghrib_start_time"
        android:layout_alignStart="@+id/textView2"
        android:padding="10dp"
        android:text="@string/start_time"
        android:textSize="17sp"

        />

    <TextView
        android:id="@+id/isha_end_time"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_below="@id/maghrib_end_time"
        android:layout_alignStart="@id/textView3"
        android:padding="10dp"
        android:text="@string/start_time"
        android:textSize="17sp"

        />






</RelativeLayout>